--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,20 +5,20 @@
         <h1 class="text-center ">Sign Up Here! </h1>
 
         <div class="mt-2 p-2">
-            <input type="text" id="acid" name="acn"  placeholder="Account number" class="form-control"><br>
+            <input [(ngModel)]="acno" type="text" id="acid" name="acn"  placeholder="Account number" class="form-control"><br>
 
         </div>
         <div class="mt-2 p-2">
-            <input type="text" id="user" name="user1" placeholder="username" class="form-control"><br>
+            <input [(ngModel)]="uname" type="text" id="user" name="user1" placeholder="username" class="form-control"><br>
 
         </div>
         <div class="mt-2 p-2">
-            <input type="password" id="psw" name="pass" placeholder="Password" class="form-control"><br>
+            <input [(ngModel)]="pass" type="password" id="psw" name="pass" placeholder="Password" class="form-control"><br>
 
         </div>
 
         <div class="container w-50 mt-2 p-2 text-center">
-            <button type="button"  (click)="register()" class="btn btn-outline-light">Register</button>
+            <button type="button"  (click)="register()"  class="btn btn-outline-light" style="color: rgba(0, 0, 0, 0.653);">Register</button>
         </div>
     </form>
 </div>
