design_edit commit

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <h4 style="text-align: right;">{{data}}</h4>
-<div class="container w-50 mt-5 text-center"  >
+<div class="container w-50 text-center" style="margin-top: 5%;" >
     <h1 class="text-center">Sign into your Bank Account </h1>
     <form action="" (ngSubmit)="login()" class="border p-1" style="background-color: rgba(80, 142, 218, 0.348);">
 
