--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,11 +2,13 @@
 <div class="p-2 container w-25 text-center " style="background-color: rgba(80, 142, 218, 0.348);">
     <a style="text-decoration: none; color: black;" href="" routerLink="/transactions">View Transaction History</a>
 </div>
-<div class="container row">
-    <div class="container col-6 p-5 text-center">
-        <div class="container w-75 p-5 mt-1 ">
+<!-- <div class="container row">
+    <div class="container col-6 p-5 text-center"> -->
+<div class="container-70 row ms-2 p-4 text-center" style="height: auto;">
+    <div class="container w-50  col-6 text-center mt-5">
+        <!-- <div class="container w-75 p-5 mt-1 "> -->
             <h2>Deposit</h2>
-            <form action="" class="border p-5 text-center" style="background-color: rgba(80, 142, 218, 0.348);">
+            <form action="" class="border p-4 text-center" style="background-color: rgba(80, 142, 218, 0.348);">
                 <div class="mt-2 p-1">
                     <input type="text" [(ngModel)]="acno" id="dacno" name="acn" placeholder="Account number"
                         class="form-control"><br>
@@ -24,18 +26,20 @@
                 </div>
 
 
-                <div class="container w-50 mt-1 p-1 text-center">
+                <div class="container  mt-1 p-1 text-center">
                     <button type="button" (click)="deposit()" class="btn btn-outline-light"
                         style="color: rgba(0, 0, 0, 0.653);">Deposit</button>
                 </div>
             </form>
-        </div>
+        <!-- </div> -->
     </div>
 
-    <div class="container col-6 p-5 text-center ">
-        <div class="container w-75 p-5 mt-1 ">
+    <!-- <div class="container col-6 p-5 text-center ">
+        <div class="container w-75 p-5 mt-1 "> -->
+   
+        <div class="container w-50 col-6 text-center mt-5">
             <h2>Withdraw</h2>
-            <form action="" class="border text-center p-5" style="background-color: rgba(80, 142, 218, 0.348);">
+            <form action="" class="border text-center p-4" style="background-color: rgba(80, 142, 218, 0.348);">
                 <div class="mt-2 p-1">
                     <input type="text" [(ngModel)]="acno1" id="wacno" name="acn" placeholder="Account number"
                         class="form-control"><br>
@@ -59,6 +63,5 @@
                 </div>
             </form>
         </div>
-    </div>
 
 </div>
