--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,25 +2,31 @@
 <div class="p-2 container w-25 text-center " style="background-color: rgba(80, 142, 218, 0.348);">
     <a style="text-decoration: none; color: black;" href="" routerLink="/transactions">View Transaction History</a>
 </div>
+<app-delele-confirm></app-delele-confirm>
+<div class="text-end pt-3 pe-4">
+    <button type="button" (click)="deleteParent()" class="btn btn-outline-warning ">Delete account</button>
+
+    <button type="button" (click)="logout()" class="ms-2 btn btn-outline-danger">logout</button>
+</div>
 <!-- <div class="container row">
     <div class="container col-6 p-5 text-center"> -->
-<div class="container-70 row ms-2 p-4 text-center" style="height: auto;">
-    <div class="container w-50  col-6 text-center mt-5">
+<div class="container-70 row ms-2 p-4 text-center " style="height: auto;">
+    <div class="container w-50  col-lg-6 col-md-6 col-12 text-center mt-3">
         <!-- <div class="container w-75 p-5 mt-1 "> -->
             <h2>Deposit</h2>
-            <form action="" class="border p-4 text-center" style="background-color: rgba(80, 142, 218, 0.348);">
+            <form [formGroup]="depositForm" action="" class="border p-4 text-center" style="background-color: rgba(80, 142, 218, 0.348);">
                 <div class="mt-2 p-1">
-                    <input type="text" [(ngModel)]="acno" id="dacno" name="acn" placeholder="Account number"
+                    <input type="text" formControlName="acno" id="dacno" name="acn" placeholder="Account number"
                         class="form-control"><br>
 
                 </div>
                 <div class="mt-1 p-1">
-                    <input type="password" [(ngModel)]="psw" id="dpsw" name="pass" placeholder="Password"
+                    <input type="password" formControlName="psw" id="dpsw" name="pass" placeholder="Password"
                         class="form-control"><br>
 
                 </div>
                 <div class="mt-1 p-1">
-                    <input type="text" [(ngModel)]="amnt" id="damount" name="amount1" placeholder="amount"
+                    <input type="text" formControlName="amnt" id="damount" name="amount1" placeholder="amount"
                         class="form-control"><br>
 
                 </div>
@@ -37,21 +43,21 @@
     <!-- <div class="container col-6 p-5 text-center ">
         <div class="container w-75 p-5 mt-1 "> -->
    
-        <div class="container w-50 col-6 text-center mt-5">
+        <div class="container w-50 col-lg-6 col-md-6 col-12 text-center mt-3">
             <h2>Withdraw</h2>
-            <form action="" class="border text-center p-4" style="background-color: rgba(80, 142, 218, 0.348);">
+            <form action="" [formGroup]="withdrawForm" class="border text-center p-4" style="background-color: rgba(80, 142, 218, 0.348);">
                 <div class="mt-2 p-1">
-                    <input type="text" [(ngModel)]="acno1" id="wacno" name="acn" placeholder="Account number"
+                    <input type="text" formControlName="acno1" id="wacno" name="acn" placeholder="Account number"
                         class="form-control"><br>
 
                 </div>
                 <div class="mt-1 p-1">
-                    <input type="password" [(ngModel)]="psw1" id="wpsw" name="pass" placeholder="Password"
+                    <input type="password" formControlName="psw1" id="wpsw" name="pass" placeholder="Password"
                         class="form-control"><br>
 
                 </div>
                 <div class="mt-1 p-1">
-                    <input type="text" [(ngModel)]="amnt1" id="wamount" name="amount1" placeholder="amount"
+                    <input type="text" formControlName="amnt1" id="wamount" name="amount1" placeholder="amount"
                         class="form-control"><br>
 
                 </div>
